# vereinskasse

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_stripe_fields.py  003_add_auth_tokens.py  004_add_payment_reminders.py  005_add_audit_log.py  006_add_events.py  007_add_member_groups.py  008_add_protocols.py  009_add_verein_documents.py  010_add_inventory.py  011_add_member_portal_token.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  auth.py  bank.py  categories.py  documents.py  donations.py  events.py  feedback.py  gdpr.py  inventory.py  member_groups.py  members.py  payment_reminders.py  portal.py  protocols.py  sepa.py  stripe_api.py  transactions.py  users.py
backend/app/core/: auth.py  security.py
backend/app/models/: __init__.py  audit_log.py  category.py  document.py  email_log.py  event.py  feedback.py  inventory.py  member.py  member_group.py  payment_reminder.py  protocol.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  feedback.py  member.py  payment_reminder.py  transaction.py  user.py
backend/app/services/: audit_service.py  email_service.py  pdf_service.py
backend/tests/: conftest.py  test_auth.py  test_members.py  test_transactions.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
mobile/: README.md  app.json  package.json
mobile/app/: _layout.tsx  (+1 more)
nginx/: default.conf
(+62 files in other folders)
